# chartmetric-mcp

./: .gitignore  pyproject.toml
docs/superpowers/plans/: 2026-03-18-chartmetric-mcp.md
docs/superpowers/specs/: 2026-03-18-chartmetric-mcp-design.md
src/chartmetric_mcp/: auth.py  client.py  server.py
src/chartmetric_mcp/tools/: album.py  artist.py  charts.py  playlist.py  search.py  track.py
tests/: test_auth.py  test_client.py
tests/tools/: test_album.py  test_artist.py  test_charts.py  test_playlist.py  test_search.py  test_track.py
