[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chartmetric-mcp"
version = "0.1.0"
description = "MCP server for the Chartmetric music analytics API"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
chartmetric-mcp = "chartmetric_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chartmetric_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]
